Fixed Hackoverflow page

--- a/src/styles.css
+++ b/src/styles.css
@@ -148,7 +148,6 @@ h3{
 .section-title {
   font-size: 32px;
   color: red;
-  text-align: left;
   font-weight: 700;
 }
 
@@ -180,45 +179,31 @@ padding-top: 100px;
 .e2h{
   font-size: 32px;
   color: red;
-  text-align: right;
-  margin-right:8mm;
-  margin-left: 500px;
   font-weight: 700;
+    text-align: right;
   padding-bottom: 10px;
+
 }
 
 
 #event2 {
   width: 100%;
-  height: 100vh;
   background: url(../images/BHW2.png);
-  background-repeat: no-repeat;
+    height: auto;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  padding: 0px 0  0 0;
-}
-
-#event2 {
+ background-size: cover;
+padding-top: 100px;
+ padding-bottom: 100px;
   color:black;
   font-size:20px;
-}
-#event2-img{
-  margin-left: 5%;
-  width:70%;
-  float:left;
-  margin-top: 11%;
-  
+    
+   
 }
 
 
-#event2-img2{
-  margin-top:25%;
-  
-  margin-left:9%;
-  position: absolute;
-  left: 0px;
-  width: 20%;
-  padding: 10px;
-}
 
 .event2-p{
   color:black;
@@ -292,6 +277,9 @@ padding-top: 100px;
   color:black;
 }
 
+hr{
+    border-top-color: red;
+}
 
 
 /*ABOUT CSS*/
